assets/src/css/site/components/_component-footer.scss
/**
 * Component: #footer
 *
 * @author  Marco Di Bella
 * @package mdb-kanzlei
 */



#footer {
    width: 100%;
    height: 75px;
    display: flex;
    justify-content: center;
    align-items: center;
}


#footer a {
    color: var(--wp--preset--color--white);
}

